[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SaveResult.gd" type="Script" id=1]

[node name="SaveResult" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 775.0
margin_bottom = 725.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 96.0
margin_right = 504.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.709804, 0.192157, 0.129412, 1 )
text = "SAVE result"
align = 1
uppercase = true

[node name="Label2" type="Label" parent="."]
margin_left = 192.0
margin_top = 312.0
margin_right = 576.0
margin_bottom = 336.0
text = "enter your name:"
uppercase = true

[node name="ScoresValue" type="Label" parent="."]
margin_left = 240.0
margin_top = 144.0
margin_right = 504.0
margin_bottom = 168.0
text = "25000"
align = 2

[node name="NameNode" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 240, 408 )

[node name="lab_1" type="Label" parent="NameNode"]
margin_right = 24.0
margin_bottom = 24.0
text = "_"

[node name="lab_2" type="Label" parent="NameNode"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 24.0
text = "_"

[node name="lab_3" type="Label" parent="NameNode"]
margin_left = 96.0
margin_right = 120.0
margin_bottom = 24.0
text = "_"

[node name="lab_4" type="Label" parent="NameNode"]
margin_left = 144.0
margin_right = 168.0
margin_bottom = 24.0
text = "_"

[node name="lab_5" type="Label" parent="NameNode"]
margin_left = 192.0
margin_right = 216.0
margin_bottom = 24.0
text = "_"

[node name="lab_6" type="Label" parent="NameNode"]
margin_left = 240.0
margin_right = 264.0
margin_bottom = 24.0
text = "_"

[node name="ArrowNode" type="Node2D" parent="NameNode"]
position = Vector2( 0, 48 )

[node name="ArrowLabel" type="Label" parent="NameNode/ArrowNode"]
margin_right = 40.0
margin_bottom = 24.0
text = "â–²"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NotifLabel" type="Label" parent="."]
visible = false
margin_top = 600.0
margin_right = 768.0
margin_bottom = 624.0
custom_colors/font_color = Color( 0.709804, 0.192157, 0.129412, 1 )
text = "saved"
align = 1
uppercase = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
